--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,26 +11,32 @@
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      User Registry
-    </h1>
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{/if}}
+  <header>
+    <h1>Welcome to the Fiscal Funhouse</h1>
   </header>
-  <main class="container container-fluid mt-5">
-    {{{ body }}}
+  <nav>
+    <a href="/">Home</a>
+    <!-- If the user is logged in, show a logout button -->
+    {{#if loggedIn}}
+    <button id="logout" class="btn-no-style">Logout</button>
+    {{else}}
+    <!-- Otherwise, show a link to login -->
+    <a href="/login">Login</a>
+    {{/if}}
+  </nav>
+  <main>
+    <aside>
+      <h2>Your Budget</h2>
+    </aside>
+    <div class="budget">
+      {{{body}}}
+    </div>
   </main>
-  <footer>
-      
-  </footer>
-
-  {{#if logged_in}}
+  <!-- If the user is logged in, load the JS script for when they logout -->
+  {{#if loggedIn}}
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
+
 
 </html>
