--- a/views/partials/expense.handlebars
+++ b/views/partials/expense.handlebars
@@ -3,7 +3,7 @@
 <table>
         <header>
             <tr>
-                {{#each headers}}
+                {{#each expense}}
                 <h3>{{expense}}</h3>
                 {{/each}}
             </tr>
