--- a/views/partials/signup.handlebars
+++ b/views/partials/signup.handlebars
@@ -1,14 +1,14 @@
 <h1>Signup</h1>
     <form>
-        <div class="mb-3">
+        <div class="signup-details">
             <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" id="username" placeholder="Enter username">
         </div>
-        <div class="mb-3">
+        <div class="signup-details">
             <label for="email" class="form-label">Email address</label>
             <input type="email" class="form-control" id="email" placeholder="Enter email">
         </div>
-        <div class="mb-3">
+        <div class="signup-details">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Enter password">
         </div>
