--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,6 +31,10 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
+        <label for="password-signup">Montly Income:</label>
+        <input class="form-input" type="text" id="user-income" />
+      </div>
+      <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
@@ -38,4 +42,4 @@
 </div>
 
 
-<script src="/js/login.js"></script>
+<script src="./js/login.js"></script>
