--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-{{!-- {{#each users as |user| }}
+{{#each users as |user| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <h2>{{!{{user.name}}</h2>
@@ -8,49 +8,8 @@
   </div>
 </div>
 <button id="logout" class="btn-no-style">Logout</button>
-{{/each}} --}}
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fiscal Funhouse</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-
-</head>
-
-<body>
-  <header>
-    <h1>Welcome to the Fiscal Funhouse</h1>
-  </header>
-  <nav>
-    <a href="/">Home</a>
-    <!-- If the user is logged in, show a logout button -->
-    {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
-    {{else}}
-    <!-- Otherwise, show a link to login -->
-    <a href="/login">Login</a>
-    
-    {{/if}}
-  </nav>
-  <main>
-    <aside>
-      <h2>Your Budget</h2>
-    </aside>
-    <div class="budget">
-      {{{body}}}
-    </div>
-  </main>
-  <!-- If the user is logged in, load the JS script for when they logout -->
-  {{#if loggedIn}}
-  <script src="./js/logout.js"></script>
-  {{/if}}
-  
-</body>
-
-
-</html>
+{{/each}}
+{{#each expenses.expenses as |expense| }}
+<h1>{{expense.name}}</h1>
+<h1>{{expense.cost}}</h1>
+{{/each}}
