--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fiscal Funhouse</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" href="./css/jass.css">
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
 </head>
 
