--- a/views/partials/expense.handlebars
+++ b/views/partials/expense.handlebars
@@ -1,4 +1,17 @@
-<!--If user is logged in, render to expense content-->
+<h2 class="page-title">Add Expense</h2>
+<form class="form expense-form">
+  <div class="form-group">
+    <label for="expense-name">Expense Name:</label>
+    <input class="form-input" type="text" id="expense-name" />
+  </div>
+  <div class="form-group">
+    <label for="expense-amount">Expense Amount:</label>
+    <input class="form-input" type="text" id="expense-amount" />
+  </div>
+  <div class="form-group">
+    <button class="btn btn-primary" type="submit">Add Expense</button>
+  </div>
+</form>
 
 
 
