--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,20 +15,23 @@
     <h1>Welcome to the Fiscal Funhouse</h1>
   </header>
   <nav>
-    <a href="/">Home</a>
+    <a class="btn btn-danger" href="/">Home</a>
     <!-- If the user is logged in, show a logout button -->
     {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
+    <button id="logout" class="btn btn-danger">Logout</button>
     {{else}}
     <!-- Otherwise, show a link to login -->
-    <a href="/login">Login</a>
+    <a class="btn btn-danger" href="/login">Login</a>
+    {{/if}}
+    {{#if loggedIn}}
+    <button id="expenseBtn" class="btn btn-danger">New Expense</button>
     {{/if}}
   </nav>
   <main>
     <aside>
       <h2>Your Budget</h2>
     </aside>
-    <div class="budget">
+    <div class="budget m-5">
       {{{body}}}
     </div>
   </main>
