--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,6 +38,7 @@
   <!-- If the user is logged in, load the JS script for when they logout -->
   {{#if loggedIn}}
   <script src="./js/logout.js"></script>
+  <script src="./js/homepage.js"></script>
   {{/if}}
 </body>
 
