--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,12 +9,14 @@
   --border-radius: 0.3rem;
 }
 
-#body {
-display: flex;
+body {
+/* display: flex;
 margin: 0;
 min-height: 100vh;
 justify-content: flex-start;
-background-color: Var(--primary);
+background-color: var (--primary); */
+background-image: url("../images/Pennywise2.jpg");
+background-size: cover;
 }
 
 header{
