--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+{{!--generates html code for users and generates elements for expenses --}}
 {{#each users as |user| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
