--- a/views/expense.handlebars
+++ b/views/expense.handlebars
@@ -1,3 +1,4 @@
+{{!--html markup for expense form--}}
 <h2 class="page-title">Add Expense</h2>
 <form class="form expense-form">
   <div class="form-group">
