--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,15 +15,18 @@ margin: 0;
 min-height: 100vh;
 justify-content: flex-start;
 background-color: var (--primary); */
-background-image: url("../images/Pennywise2.jpg");
+background-image: url("../images/NiN_MAZE_0020.jpg");
 background-size: cover;
+font-family: 'Rubik Bubbles', cursive;
+color: white;
 }
+
 
 header{
 padding: 40px;
 text-align: center;
-background: var(--primary);
-color: var (--quatrinary);
+background: #65aa38;
+/* color: var (--quatrinary); */
 }
 
 main{
@@ -32,11 +35,22 @@ flex-wrap: wrap;
 flex-grow: 1;
 }
 
-budget{
+#expenseChart {
+  width: 400px !important;
+  height: 400px !important;
+  color: white !important;
+}
+
+.expense {
+  width: 100% !important;
+}
+
+.budget{
 display: flex;
 padding: 50px;
 justify-content: center;
 align-items: center;
+width: 100vw;
 }
 
 .container {
@@ -46,4 +60,7 @@ align-items: center;
     align-items: center;
   }
 
+.form-input {
+  background-color: #65aa38 !important;
+}
   
