--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 {{!--display and elements for login and signup --}}
-<div class="row justify-space-between-md">
+<div class="row justify-content-center">
   <div class="login-card">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
